--- a/libs/Makefile
+++ b/libs/Makefile
@@ -9,14 +9,19 @@ SLIST = slist.c
 ARBOL = arbol.c
 CONTACTO = contacto.c
 ACCIONES = acciones.c
+IMPRESIONES = impresiones.c
 FLAGS = -Wall -Wextra -Werror -g -std=c99
 
 .PHONY : all
 all: main clean
 
 # Ejecutable de la implementación del programa.
-main: main.c $(INTERPRETE:.c=.o) $(TABLAHASH:.c=.o) $(ANDOR:.c=.o) $(STREE:.c=.o) $(SLIST:.c=.o) $(ARBOL:.c=.o) $(CONTACTO:.c=.o) $(ACCIONES:.c=.o)
+main: main.c $(INTERPRETE:.c=.o) $(TABLAHASH:.c=.o) $(ANDOR:.c=.o) $(STREE:.c=.o) $(SLIST:.c=.o) $(ARBOL:.c=.o) $(CONTACTO:.c=.o) $(ACCIONES:.c=.o) $(IMPRESIONES:.c=.o)
 	$(CC) $(FLAGS) -o $@ $^ -pthread
+
+# Archivo objeto de la implementación de las funciones de impresión
+$(IMPRESIONES:.c=.o) : $(IMPRESIONES) $(IMPRESIONES:.c=.h)
+	$(CC) $(FLAGS) -c $(IMPRESIONES)
 
 # Archivo objeto de la implementación de las listas de acciones para deshacer y rehacer
 $(ACCIONES:.c=.o) : $(ACCIONES) $(ACCIONES:.c=.h)
@@ -47,7 +52,7 @@ $(ANDOR:.c=.o) : $(ANDOR) $(ANDOR:.c=.h) $(STREE:.c=.o) $(TABLAHASH:.c=.o)
 	$(CC) $(FLAGS) -c $(ANDOR)
 
 # Archivo objeto de la implementación del intérprete.
-$(INTERPRETE:.c=.o) : $(INTERPRETE) $(INTERPRETE:.c=.h) $(ANDOR:.c=.o) $(ACCIONES:.c=.o)
+$(INTERPRETE:.c=.o) : $(INTERPRETE) $(INTERPRETE:.c=.h) $(ANDOR:.c=.o) $(ACCIONES:.c=.o) $(IMPRESIONES:.c=.o)
 	$(CC) $(FLAGS) -c $(INTERPRETE)
 
 # Destino simbólico que borra todos los archivos con extensión .o cuando se invoca.
